TSM/virtual-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiodemoservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: istio-node
        subset: v1
        port:
          number: 8080
      weight: 50
    - destination:
        host: istio-node
        subset: v2
        port:
          number: 8080
      weight: 50
